--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,9 @@ dependencies:
   provider: ^6.1.2
   cupertino_icons: ^1.0.8
   curved_labeled_navigation_bar: ^2.0.5
+  firebase_auth: ^5.3.4
+  firebase_core: ^3.9.0
+  google_sign_in: ^6.2.2
 
 dev_dependencies:
   flutter_test:
